[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies/Multiphase_Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy Animations/Bosses/Beasts/Glutmon/Glutmon Form One Sprite Sheet.png" type="Texture" id=2]
[ext_resource path="res://Enemy Animations/Bosses/Beasts/Glutmon/Glutmon Form Two Sprite Sheet.png" type="Texture" id=3]
[ext_resource path="res://Enemy Animations/Bosses/Beasts/Glutmon/Glutmon Form Three Sprite Sheet.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Bosses/Glutmon/Glutmon.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Dying"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hurt"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=6]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82 ]
}

[sub_resource type="Animation" id=7]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hurt"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 65, 66, 67, 68 ]
}

[sub_resource type="Animation" id=9]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=11]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("../ThirdForm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13, 0.26, 0.5, 0.63, 0.76 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 66, 67, 68, 69, 70, 71 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Dying"
length = 1.14
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 90, 91, 92, 93 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Hurt"
length = 0.73
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 77, 78, 79, 80 ]
}

[sub_resource type="Animation" id=14]
length = 0.74
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../ThirdForm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.27, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=15]
length = 1.82
tracks/0/type = "value"
tracks/0/path = NodePath("../ThirdForm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13, 0.26, 0.39, 0.52, 0.65, 0.78, 0.91, 1.04, 1.17, 1.3, 1.43, 1.56, 1.69 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35, 36, 37, 44, 45, 46, 47, 55, 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=16]
length = 1.56
tracks/0/type = "value"
tracks/0/path = NodePath("../ThirdForm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13, 0.26, 0.39, 0.52, 0.65, 0.78, 0.91, 1.04, 1.17, 1.3, 1.43 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="Glutmon" instance=ExtResource( 1 )]
position = Vector2( 518.451, 276.715 )
scale = Vector2( 4.97623, 4.24787 )
script = ExtResource( 5 )
health = 5

[node name="FirstForm" type="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
flip_h = true
hframes = 8
vframes = 5
frame = 16

[node name="FirstFormAnimation" type="AnimationPlayer" parent="FirstForm" index="0"]
anims/Attack = SubResource( 1 )
anims/Dying = SubResource( 2 )
anims/Hurt = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="SecondForm" type="Sprite" parent="." index="1"]
visible = false
position = Vector2( -0.249748, -0.722046 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
flip_h = true
hframes = 13
vframes = 7
frame = 39

[node name="SecondFormAnimation" type="AnimationPlayer" parent="SecondForm" index="0"]
anims/Attack = SubResource( 5 )
anims/Dying = SubResource( 6 )
anims/Eat = SubResource( 7 )
anims/Hurt = SubResource( 8 )
anims/Idle = SubResource( 9 )
anims/Transform = SubResource( 10 )

[node name="ThirdForm" type="Sprite" parent="." index="2"]
visible = false
position = Vector2( 0.725937, -32.032 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
flip_h = true
hframes = 11
vframes = 9
frame = 93

[node name="ThirdFormAnimation" type="AnimationPlayer" parent="ThirdForm" index="0"]
anims/Attack = SubResource( 11 )
anims/Dying = SubResource( 12 )
anims/Hurt = SubResource( 13 )
anims/Idle = SubResource( 14 )
anims/Inhale = SubResource( 15 )
anims/Transform = SubResource( 16 )

[connection signal="died" from="." to="." method="_on_Glutmon_died"]
